--- a/includes/customize.yaml
+++ b/includes/customize.yaml
@@ -62,6 +62,14 @@ sensor.status_volume_1:
   friendly_name: Volume 1 Status
 sensor.status_volume_3:
   friendly_name: Volume 3 Status
+binary_sensor.switch_158d0001a21086:
+  friendly_name: Bedroom Switch
+binary_sensor.door_window_sensor_158d000186f0ec:
+  friendly_name: Back Door Sensor
+binary_sensor.door_window_sensor_158d00019f3211:
+  friendly_name: Front Door Sensor
+binary_sensor.motion_sensor_158d000165627b:
+  friendly_name: Hallway Motion
 sensor.fibaro_system_fgms001zw5_motion_sensor_temperature:
   friendly_name: Living Room Temperature
   icon: mdi:thermometer
@@ -79,6 +87,7 @@ binary_sensor.tampering:
 script.good_night:
   friendly_name: Good Night
   icon: mdi:sleep
+  
 # Hidden Items
 media_player._ua55ju6400_ua55ju6400:
   hidden: true
