--- a/includes/sensor.yaml
+++ b/includes/sensor.yaml
@@ -11,23 +11,23 @@
   monitored_conditions:
     - summary
     - icon
-#    - nearest_storm_distance
-#    - nearest_storm_bearing
+    - nearest_storm_distance
+    - nearest_storm_bearing
 #    - precip_type
     - precip_intensity
-#    - precip_probability
+    - precip_probability
     - temperature
-#    - apparent_temperature
+    - apparent_temperature
 #    - dew_point
-#    - wind_speed
-#    - wind_bearing
+    - wind_speed
+    - wind_bearing
 #    - cloud_cover
     - humidity
-#    - pressure
-#    - visibility
+    - pressure
+    - visibility
 #    - ozone
     - minutely_summary
-#    - hourly_summary
+    - hourly_summary
     - daily_summary
     - temperature_max
     - temperature_min
