--- a/includes/customize.yaml
+++ b/includes/customize.yaml
@@ -62,6 +62,12 @@ sensor.status_volume_1:
   friendly_name: Volume 1 Status
 sensor.status_volume_3:
   friendly_name: Volume 3 Status
+sensor.temperature_158d0001a2e878:
+  friendly_name: Bedroom Temperature
+  icon: mdi:thermometer
+sensor.humidity_158d0001a2e878:
+  friendly_name: Bedroom Humidity
+  icon: water-percent
 binary_sensor.switch_158d0001a21086:
   friendly_name: Bedroom Switch
 binary_sensor.door_window_sensor_158d000186f0ec:
@@ -82,7 +88,7 @@ sensor.fibaro_system_fgms001zw5_motion_sensor_seismic_intensity:
 binary_sensor.motion:
   friendly_name: Living Room Motion
 binary_sensor.tampering:
-  friendly_name: Sensor Tampering
+  friendly_name: Living Room Sensor Tampering
   icon: mdi:shield-outline
 script.good_night:
   friendly_name: Good Night
