--- a/includes/customize.yaml
+++ b/includes/customize.yaml
@@ -67,7 +67,7 @@ sensor.temperature_158d0001a2e878:
   icon: mdi:thermometer
 sensor.humidity_158d0001a2e878:
   friendly_name: Bedroom Humidity
-  icon: water-percent
+  icon: mdi.water-percent
 binary_sensor.switch_158d0001a21086:
   friendly_name: Bedroom Switch
 binary_sensor.door_window_sensor_158d000186f0ec:
