--- a/configuration.yaml
+++ b/configuration.yaml
@@ -10,6 +10,8 @@ homeassistant:
   unit_system: metric
   # Pick yours from here: http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
   time_zone: Australia/Melbourne
+  # Include Packages
+  packages: !include_dir_named packages
  
 # Customizations
   customize: !include includes/customize.yaml
@@ -86,6 +88,8 @@ updater:
 
 # Discover some devices automatically
 discovery:
+  ignore:
+  - netgear_router
 
 # Allows you to issue voice commands from the frontend in enabled browsers
 conversation:
@@ -105,6 +109,11 @@ sun:
 # Text to speech
 tts:
   platform: google  
+  
+# Purge Database Interval
+recorder:
+  purge_interval: 2
+  purge_keep_days: 14
   
 # Media Player
 media_player:
@@ -268,7 +277,7 @@ automation: !include automations.yaml
 #apiai: !include includes/apiai.yaml
 input_boolean: !include includes/input_boolean.yaml
 input_select: !include includes/input_select.yaml
-input_slider: !include includes/input_slider.yaml
+input_number: !include includes/input_number.yaml
 light: !include includes/light.yaml
 weblink: !include includes/weblink.yaml
 binary_sensor: !include includes/binary_sensor.yaml
