--- a/includes/sensor.yaml
+++ b/includes/sensor.yaml
@@ -80,13 +80,13 @@
   sensors:
     ac_setting_cool:
       friendly_name: 'Current AC Cool Setting'
-      value_template: '{{ states.input_slider.ac_target_temp.state | int }}-{{ states.input_select.ac_fan_mode.state }}-{{ states.input_select.ac_swing_mode.state }}'
+      value_template: '{{ states.input_number.ac_target_temp.state | int }}-{{ states.input_select.ac_fan_mode.state }}-{{ states.input_select.ac_swing_mode.state }}'
     ac_setting_fan:
       friendly_name: 'Current AC Fan Setting'
       value_template: 'FAN-{{ states.input_select.ac_fan_mode.state }}-{{ states.input_select.ac_swing_mode.state }}' 
     ac_target:
       friendly_name: 'Target Temperature'
-      value_template: '{{ states.input_slider.ac_target_temp.state | int }}'
+      value_template: '{{ states.input_number.ac_target_temp.state | int }}'
       unit_of_measurement: '°C'
     harmony_activity:
       friendly_name: 'Harmony Activity'
@@ -112,6 +112,40 @@
     livingroomtv:
       friendly_name: 'Living Room TV'
       value_template: "{{ 'Online' if is_state('device_tracker.f8042e789976', 'home') else 'Offline' }}"
+# Translate UPS Status / Runtime
+    ups_status:
+      friendly_name: 'UPS Status'
+      value_template: >-
+        {% if is_state('sensor.ups_status_data', 'OL') %}
+          On line
+        {% elif is_state('sensor.ups_status_data', 'OL CHRG') %}
+          On line Charging
+        {% elif is_state('sensor.ups_status_data', 'OB DISCHRG') %}
+          On Battery
+        {% elif is_state('sensor.ups_status_data', 'LB') %}
+          Low battery
+        {% elif is_state('sensor.ups_status_data', 'SD') %}
+          Shutdown load
+        {% elif is_state('sensor.ups_status_data', 'CP') %}
+          Cable power
+        {% elif is_state('sensor.ups_status_data', 'CTS') %}
+          Clear to Send
+        {% elif is_state('sensor.ups_status_data', 'RTS') %}
+          Ready to Send
+        {% elif is_state('sensor.ups_status_data', 'DCD') %}
+          Data Carrier Detect
+        {% elif is_state('sensor.ups_status_data', 'RNG') %}
+          Ring indicate
+        {% elif is_state('sensor.ups_status_data', 'DTR') %}
+          Data Terminal Ready
+        {% elif is_state('sensor.ups_status_data', 'ST') %}
+          Send Break
+        {% endif %}
+    ups_battery_runtime_mins:
+      friendly_name: 'UPS Battery Runtime'
+      unit_of_measurement: 'minutes'
+      value_template: "{{ states('sensor.ups_battery_runtime')|float / 60 |round(2)}}"
+      
 # API Stream Sensor
 - platform: api_streams 
 
@@ -157,4 +191,20 @@
     - humidity
     - pressure
     - clouds
-    - rain  
+    - rain
+
+# Synology UPS Data
+- platform: nut
+  name: UPS
+  host: !secret sensor_synology_host
+  port: 3493
+  alias: UPS
+#  username: user
+#  password: pass
+  resources:
+    - ups.status
+    - ups.load
+    - ups.realpower.nominal
+    - input.voltage
+    - battery.runtime
+    - battery.charge
