--- a/includes/automation/buttons.yaml
+++ b/includes/automation/buttons.yaml
@@ -3,7 +3,24 @@
 # Automation ifttt
 #
 ############################################################
-  
+
+############################################################
+#
+# Bed Room Button - Turn Trent Bedside Lamp on
+#
+############################################################
+
+- alias: Bed Room Button - Bedside Lamp toggle
+  trigger:
+  - platform: event
+    event_type: click
+    event_data:
+      entity_id: binary_sensor.switch_158d0001a21086
+      click_type: single
+  action:
+  - service: light.toggle
+    entity_id: light.trent_bedside
+
 ############################################################
 #
 # Bed Room Button - Good Night
@@ -16,6 +33,6 @@
     event_type: click
     event_data:
       entity_id: binary_sensor.switch_158d0001a21086
-      click_type: single
+      click_type: hold
   action:
   - service: script.good_night
