--- a/includes/group.yaml
+++ b/includes/group.yaml
@@ -110,6 +110,8 @@ scripts:
   name: Scripts
   entities:
     - script.good_night
+    - script.start_air_conditioner
+    - script.stop_air_conditioner
 security:
   name: Security
   entities:
@@ -188,7 +190,6 @@ ups:
     - sensor.ups_load
     - sensor.ups_battery_runtime_mins
     - sensor.ups_battery_charge
-    - sensor.ups_nominal_real_power
 automation_override:
   name: Automation Override
   entities:
@@ -199,6 +200,7 @@ automation_override:
     - input_boolean.disable_afternoon_notification
     - input_boolean.disable_unexpected_motion_notification
     - input_boolean.disable_device_tampering_notification
+    - input_boolean.disable_washing_machine_notification
     - input_boolean.disable_entry_light_trent_home
     - input_boolean.disable_entryway_light_frontdoor
 mediaplayer_dimmer_livingroom:
