--- a/includes/script.yaml
+++ b/includes/script.yaml
@@ -24,7 +24,7 @@ good_night:
         entity_id: media_player.living_room
     - service: media_player.turn_off
       data:
-        entity_id: media_player.bed_room       
+        entity_id: media_player.bed_room
     - service: media_player.turn_off
       data:
         entity_id: media_player.outside
@@ -34,5 +34,28 @@ good_night:
     - service: remote.turn_off
       data:
         entity_id: remote.living_room
-        
+start_air_conditioner:
+  sequence:
+    - service: input_select.select_option
+      data:
+        entity_id: input_select.ac_fan_mode
+        option: AUTO
+    - service: input_select.select_option
+      data:
+        entity_id: input_select.ac_swing_mode
+        option: TOP
+    - service: input_number.set_value
+      data:
+        entity_id: input_number.ac_target_temp
+        value: 21
+    - service: input_select.select_option
+      data:
+        entity_id: input_select.ac_operation_mode
+        option: COOL
+stop_air_conditioner:
+  sequence:
+    - service: input_select.select_option
+      data:
+        entity_id: input_select.ac_operation_mode
+        option: Power Off
 # Will add notification if devices are online (IE PC)
